--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         <!-- LAYER 5: INFO CARD -->
         <section class="info-card">
             <h2>About Me</h2>
-            <p>Welcome to my vibrant digital space! I'm Xepp, a creative professional who thrives on pushing boundaries and exploring the intersection of technology and art. My work is a colorful journey through digital landscapes, where I blend unconventional ideas with technical expertise.</p>
+            <p>Welcome to my vibrant digital space! I'm Xepp, a creative professional who thrives on pushing boundaries and exploring the intersection of technology and art. My work is a colorful blend of imagination and technical skill, always seeking new ways to inspire and innovate.</p>
             
             <!-- DISCLAIMER WARNING -->
             <div class="disclaimer">
