--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
         <!-- FOOTER -->
         <footer class="footer">
-            <div class="rgb-text">Made With Creative Chaos ©2025</div>
+            <div class="rgb-text">Made With Axep ©2025</div>
         </footer>
     </div>
 
