--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <section class="profile">
             <img src="https://files.catbox.moe/1we14a.jpg" alt="aXepp" class="profile-pic">
             <h1>aXepp Creative</h1>
-            <p>Digital Artist | Web Designer | Unconventional Thinker</p>
+            <p>Digital Art | Web Designer | Unconventional Thinker</p>
         </section>
 
         <!-- INFO CARD -->
@@ -477,14 +477,14 @@
             
             <!-- DISCLAIMER -->
             <div class="disclaimer">
-                "this is just a random website there is nothing true in this portfolio"
+                "This is Just a Random Website there is Nothing True in this Portofolio"
             </div>
             
             <!-- PERSONAL INFO -->
             <div class="personal-info">
                 <div class="info-item">Address: DKI Jakarta</div>
-                <div class="info-item">Age: 17</div>
-                <div class="info-item">Hobby: Eating nails</div>
+                <div class="info-item">Age: 17 Y.O</div>
+                <div class="info-item">Hobby: Makan Paku</div>
             </div>
         </section>
 
