--- a/index.html
+++ b/index.html
@@ -551,14 +551,16 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <a href="https://open.spotify.com/track/0FIDCNYYjNvPVimz5icugS?si=c2Ztz7fVTwmn7JpuDUK0lQ" target="_blank" class="spotify-button">
+            <a href="https://open.spotify.com/track/0FIDCNYYjNvPVimz5icugS?si=c2Ztz7fVTwmn7JpuDUK0lQ" 
+               target="_blank" 
+               class="spotify-button">
                 <i class="fab fa-spotify"></i> Open in Spotify
             </a>
         </div>
         
         <!-- LAYER BARU KHUSUS UNTUK ENDPOINT BUTTON -->
         <div class="endpoint-layer">
-            <a href="api.axepppp.biz.id" target="_blank" class="endpoint-button">
+            <a href="https://api.axepppp.biz.id" target="_blank" class="endpoint-button">
                 <i class="fas fa-code"></i> View EndPoint Documentation
             </a>
         </div>
