--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         
         <!-- LAYER BARU KHUSUS UNTUK ENDPOINT BUTTON -->
         <div class="endpoint-layer">
-            <a href="https://api.axepppp.biz.id" target="_blank" class="endpoint-button">
+            <a href="https://restapix.axepppp.biz.id" target="_blank" class="endpoint-button">
                 <i class="fas fa-code"></i> View EndPoint Documentation
             </a>
         </div>
