--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     
     <!-- MUSIK AUTOPLAY -->
     <audio id="bgMusic" loop>
-        <source src="https://files.catbox.moe/9yc3fe.mp4" type="audio/mp4">
+        <source src="https://files.catbox.moe/fbykzr.mp3" type="audio/mp4">
     </audio>
 
     <!-- KONTEN UTAMA -->
@@ -551,7 +551,7 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <a href="https://open.spotify.com/track/0FIDCNYYjNvPVimz5icugS?si=c2Ztz7fVTwmn7JpuDUK0lQ" 
+            <a href="https://open.spotify.com/track/7vcWcY8eWEFbAoE0JAxwXe?si=44iSiiUzTsC8ML9Wm1P2ow" 
                target="_blank" 
                class="spotify-button">
                 <i class="fab fa-spotify"></i> Open in Spotify
